samples/_failures_safe/1761375885_6b844a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bafa4d19.c: In function ‘main’:
./samples/SAFE/__tmp_bafa4d19.c:154:16: error: missing terminating " character
  154 |         printf("
      |                ^
./samples/SAFE/__tmp_bafa4d19.c:154:9: error: expected expression at end of input
  154 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_bafa4d19.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bafa4d19.c:154:9: error: expected declaration or statement at end of input
